# openr

./: .prettierignore  .prettierrc.json  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  Contribución  Dockerfile  Dockerfile_breeze  FBGenCMakeBuildInfo.cmake  LICENSE-examples  README.md  Readme.md  Test.py  ThriftCppLibrary.cmake  ThriftLibrary.cmake  example_openr.conf  fbmeshd.cmake
openr/: .clang-format  CMakeLists.txt  FBCODE_PLATFORM  Main.cpp
openr/allocators/: PrefixAllocator.cpp  PrefixAllocator.h  RangeAllocator-inl.h  RangeAllocator.h
openr/common/: AddressUtil.h  AsyncDebounce.h  AsyncThrottle.cpp  AsyncThrottle.h  BuildInfo.cpp  BuildInfo.h  CMakeBuildInfo.h  Constants.cpp  Constants.h  EventLogger.h  ExponentialBackoff.cpp  ExponentialBackoff.h  FileUtil.cpp  FileUtil.h  Flags.cpp  Flags.h  KnownKeysStore.cpp  KnownKeysStore.h  LsdbTypes.cpp  LsdbTypes.h  LsdbUtil.cpp  LsdbUtil.h  MainUtil.cpp  MainUtil.h  MplsUtil.h  NetworkUtil.cpp  NetworkUtil.h  OpenrClient.h  OpenrEventBase.cpp  OpenrEventBase.h  OpenrEventLoop.cpp  OpenrEventLoop.h  OpenrModule.cpp  OpenrModule.h  OpenrProfiler.cpp  OpenrProfiler.h  OpenrThriftCtrlServer.cpp  OpenrThriftCtrlServer.h  PrependLabelAllocator.cpp  PrependLabelAllocator.h  (+8 more)
openr/config/: Config.cpp  Config.h  GflagConfig.h
openr/config-store/: PersistentStore.cpp  PersistentStore.h  PersistentStoreClient.cpp  PersistentStoreClient.h  PersistentStoreWrapper.cpp  PersistentStoreWrapper.h
openr/ctrl-server/: OpenrCtrlHandler.cpp  OpenrCtrlHandler.h
openr/decision/: Decision.cpp  Decision.h  FabricHelper.cpp  FabricHelper.h  Link.cpp  Link.h  LinkState.cpp  LinkState.h  PrefixState.cpp  PrefixState.h  RibEntry.h  RibPolicy.cpp  RibPolicy.h  RouteUpdate.h  SpfSolver.cpp  SpfSolver.h  SrPolicy.cpp  SrPolicy.h
openr/decision-old/: DecisionOld.cpp  DecisionOld.h
openr/dispatcher/: Dispatcher.cpp  Dispatcher.h  DispatcherQueue.cpp  DispatcherQueue.h
openr/docs/: .gitignore  Breeze.md  CFM_RULES  Decision.md  DeveloperGuide.md  Emulator.md  Fib.md  KvStore.md  LinkMonitor.md  Makefile  Miscellaneous.md  Monitoring.md  Overview.md  Platform.md  PrefixAllocator.md  PrefixManager.md  RangeAllocator.md  RibPolicy.md  RouteRepresentation.md  Runbook.md  SourceRouting.md  Spark.md  Versions.md  conf.py  index.rst  make.bat  requirements.txt
openr/dual/: Dual.cpp  Dual.h
openr/fbmeshd/: CMakeLists.txt  FollySignalHandler.h  MeshServiceHandler.h  README.md  SignalHandler.h  ThriftLibrary.cmake  main.cpp
openr/fib/: Fib.cpp  Fib.h
openr/health-checker/: HealthChecker.cpp  HealthChecker.h
openr/if/: AllocPrefix.thrift  BgpConfig.thrift  Decision.thrift  Dual.thrift  Fib.thrift  HealthChecker.thrift  IpPrefix.thrift  KnownKeys.thrift  KvStore.thrift  LinkMonitor.thrift  LinuxPlatform.thrift  Lsdb.thrift  Network.thrift  OpenrConfig.thrift  OpenrConfigV2.thrift  OpenrCtrl.thrift  OpenrCtrlCpp.thrift  PersistentStore.thrift  Platform.thrift  PrefixManager.thrift  Spark.thrift  Types.thrift  fbmeshd.thrift
openr/iosxrsl/: .ServiceLayerRoute.h.swp  Makefile  ServiceLayerAsyncInit.cpp  ServiceLayerAsyncInit.h  ServiceLayerException.h  ServiceLayerMain.cpp  ServiceLayerRoute.cpp  ServiceLayerRoute.h  ServiceLayerRshuttle.cpp  ServiceLayerRshuttle.h
openr/kvstore/: Dual.cpp  Dual.h  KvStore-inl.h  KvStore.cpp  KvStore.h  KvStoreClient-inl.h  KvStoreClient.cpp  KvStoreClient.h  KvStoreClientInternal.cpp  KvStoreClientInternal.h  KvStoreParams.h  KvStorePublisher.cpp  KvStorePublisher.h  KvStoreServiceHandler-inl.h  KvStoreServiceHandler.cpp  KvStoreServiceHandler.h  KvStoreUtil-inl.h  KvStoreUtil.cpp  KvStoreUtil.h  KvStoreWrapper.cpp  KvStoreWrapper.h
openr/link-monitor/: AdjacencyEntry.cpp  AdjacencyEntry.h  InterfaceEntry.cpp  InterfaceEntry.h  LinkMonitor.cpp  LinkMonitor.h
openr/mem-leak/: MemLeak.cpp  MemLeak.h
openr/messaging/: Queue-inl.h  Queue.h  ReplicateQueue-inl.h  ReplicateQueue.h
openr/monitor/: LogSample.cpp  LogSample.h  Monitor.cpp  Monitor.h  MonitorBase.cpp  MonitorBase.h  SystemMetrics.cpp  SystemMetrics.h
openr/neighbor-monitor/: NeighborMonitor.cpp  NeighborMonitor.h
openr/nl/: NetlinkAddrMessage.cpp  NetlinkAddrMessage.h  NetlinkException.h  NetlinkIfSocket.cpp  NetlinkIfSocket.h  NetlinkLinkMessage.cpp  NetlinkLinkMessage.h  NetlinkMessage.cpp  NetlinkMessage.h  NetlinkMessageBase.cpp  NetlinkMessageBase.h  NetlinkNeighborMessage.cpp  NetlinkNeighborMessage.h  NetlinkProtocolSocket.cpp  NetlinkProtocolSocket.h  NetlinkRoute.cpp  NetlinkRoute.h  NetlinkRouteMessage.cpp  NetlinkRouteMessage.h  NetlinkRouteSocket.cpp  NetlinkRouteSocket.h  NetlinkRuleMessage.cpp  NetlinkRuleMessage.h  NetlinkSocket.cpp  NetlinkSocket.h  NetlinkSubscriber.cpp  NetlinkSubscriber.h  NetlinkTypes.cpp  NetlinkTypes.h  README
openr/platform/: IosxrslFibHandler.cpp  IosxrslFibHandler.h  LinuxPlatformMain.cpp  NetlinkFibHandler.cpp  NetlinkFibHandler.h  NetlinkServiceHandler.cpp  NetlinkServiceHandler.h  NetlinkSystemHandler.cpp  NetlinkSystemHandler.h  PlatformPublisher.cpp  PlatformPublisher.h
openr/plugin/: Plugin.cpp  Plugin.h
openr/policy/: PolicyManager.cpp  PolicyManager.h  PolicyStructs.h
openr/prefix-manager/: PrefixManager.cpp  PrefixManager.h  PrefixManagerClient.cpp  PrefixManagerClient.h
openr/py/: build_thrift.py  setup.py
openr/scripts/: facebook_arista_openr_init.sh  facebook_fboss_openr.service  openr.service  openr_install_acl.sh  run_openr.sh
openr/servicelayer/: sl_common_types.grpc.pb.cpp  sl_common_types.grpc.pb.h  sl_common_types.pb.cpp  sl_common_types.pb.h  sl_global.grpc.pb.cpp  sl_global.grpc.pb.h  sl_global.pb.cpp  sl_global.pb.h  sl_route_common.grpc.pb.cpp  sl_route_common.grpc.pb.h  sl_route_common.pb.cpp  sl_route_common.pb.h  sl_route_ipv4.grpc.pb.cpp  sl_route_ipv4.grpc.pb.h  sl_route_ipv4.pb.cpp  sl_route_ipv4.pb.h  sl_route_ipv6.grpc.pb.cpp  sl_route_ipv6.grpc.pb.h  sl_route_ipv6.pb.cpp  sl_route_ipv6.pb.h  sl_version.grpc.pb.cpp  sl_version.grpc.pb.h  sl_version.pb.cpp  sl_version.pb.h  vrf.cc  vrf.cpp  vrf.h
openr/spark/: IoProvider.h  (+5 more)
(+543 files in other folders)
